--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,45 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:paddingLeft="@dimen/activity_horizontal_margin"
-                android:paddingRight="@dimen/activity_horizontal_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".MainActivity">
-
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-</RelativeLayout>
+<LinearLayout
+  xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:orientation="vertical"
+  tools:context=".MainActivity">
+  <FrameLayout
+    android:layout_width="match_parent"
+    android:layout_height="0dp"
+    android:layout_weight="1"
+    android:id="@+id/main_content"
+    />
+  <RadioGroup
+    android:id="@+id/main_bottom_tabs"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
+    <RadioButton
+      android:id="@+id/main_home"
+      android:text="@string/main_home"
+      android:drawableTop="@drawable/main_home_selector"
+      style="@style/main_bottom_tab"
+      />
+    <RadioButton
+      android:id="@+id/main_tuan"
+      android:text="@string/main_tuan"
+      android:drawableTop="@drawable/main_tuan_selector"
+      style="@style/main_bottom_tab"
+      />
+    <RadioButton
+      android:id="@+id/main_search"
+      android:text="@string/main_search"
+      android:drawableTop="@drawable/main_search_selector"
+      style="@style/main_bottom_tab"
+      />
+    <RadioButton
+      android:id="@+id/main_my"
+      android:text="我的"
+      android:drawableTop="@drawable/main_my_selector"
+      style="@style/main_bottom_tab"
+      />
+  </RadioGroup>
+</LinearLayout>
