--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,12 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="textsize_20sp">20sp</dimen>
+    <dimen name="paddingLeft_30dp">30dp</dimen>
+    <dimen name="paddingRight_30dp">30dp</dimen>
+    <dimen name="textsize_25sp">25sp</dimen>
+    <dimen name="padding_8dp">8dp</dimen>
+    <dimen name="padding_10dp">10dp</dimen>
+    <dimen name="imagesize_30dp">30dp</dimen>
+    <dimen name="margin_8dp">8dp</dimen>
 </resources>
