--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
   <color name="normal_orange_color">#FF6633</color>
   <color name="gray">#696969</color>
   <color name="white">#FFFFFF</color>
+  <color name="location_city_bg">#e1e1e0</color>
+  <color name="normal_bg_color">#66E0DFE0</color>
 </resources>
