--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="padding_10dp">10dp</dimen>
     <dimen name="imagesize_30dp">30dp</dimen>
     <dimen name="margin_8dp">8dp</dimen>
+    <dimen name="texisize_18sp">18sp</dimen>
+    <dimen name="padding_12dp">12dp</dimen>
 </resources>
