--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,6 @@
     <dimen name="margin_8dp">8dp</dimen>
     <dimen name="texisize_18sp">18sp</dimen>
     <dimen name="padding_12dp">12dp</dimen>
+    <dimen name="layout_width_45dp">45dp</dimen>
+    <dimen name="padding_5dp">5dp</dimen>
 </resources>
