--- a/app/src/main/res/layout/tuan_index.xml
+++ b/app/src/main/res/layout/tuan_index.xml
@@ -21,10 +21,12 @@
       android:padding="10dp"/>
 
   </LinearLayout>
-  <ListView
+  <com.handmark.pulltorefresh.library.PullToRefreshListView
     android:id="@+id/index_listGoods"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="1"
+    android:divider="?android:attr/listDivider"
+    android:dividerHeight="3dp"
     android:scrollbars="none"/>
 </LinearLayout>
