--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="padding_12dp">12dp</dimen>
     <dimen name="layout_width_45dp">45dp</dimen>
     <dimen name="padding_5dp">5dp</dimen>
+    <dimen name="height_30dp">30dp</dimen>
+    <dimen name="width_30dp">30dp</dimen>
 </resources>
